<resources>
    <string name="app_name">드링클리</string>

    <!-- 사업자 정보 -->
    <string name="email">drinkly.team@gmail.com</string>
    <string name="copyRight">ⓒ Drinkly. All Rights Reserved.</string>
    <string name="drinklyInfo">사업자 번호 : 698-10-03098 | 상호명 : 드링클리 | 대표 : 변상우\n이메일 : drinkly.team@gmail.com | 전화 : 010-2676-5349\n통신판매업신고 : 2025-서울성북-0359호 | 주소  서울 성북구 화랑로 299, 1608호</string>

    <!-- 이용 약관 -->
    <string name="agreement1"><u>서비스 이용 약관 (필수)</u></string>
    <string name="agreement2"><u>개인정보 수집 및 이용동의서 (필수)</u></string>

    <!-- 온보딩 -->
    <string name="onboarding1_title">매일 다양한 혜택과 쿠폰을 한번에!</string>
    <string name="onboarding1_description">바쁜 일상 속 소소한 혜택을 누려보세요\n</string>
    <string name="onboarding2_title">내 주변 제휴업체를 한 눈에</string>
    <string name="onboarding2_description">주변 제휴 업체를 리스트 또는\n지도로 한 눈에 쉽게 확인할 수 있어요</string>
    <string name="onboarding3_title">멤버십 구독을 통한 다양한 경험</string>
    <string name="onboarding3_description">멤버십 구독으로 매일 다른 제휴 매장에서\n다양한 혜택을 경험해보세요</string>
    <string name="onboarding4_title">간편한 멤버십 인증</string>
    <string name="onboarding4_description">원하는 멤버십 혜택을 선택한 후에\n매장 직원분께 보여드리면 인증 완료!</string>

    <!-- 멤버십 안내사항 -->
    <string name="membership_guide">- 메인 메뉴 1개를 필수로 주문해야 사용 가능해요.\n- 테이블(4인 기준)당 멤버십 1회 사용이 가능해요.\n- 같은 매장에서는 하루에 한 번만 사용할 수 있어요.\n- 멤버십은 매일 정오(낮 12시)에 다시 사용할 수 있도록 초기화돼요.</string>
    <string name="membership_cancel_guide">- 결제 후 7일 이내에 결제 취소가 가능합니다.\n- 결제 이후 1번 이상 사용하면 취소가 불가능합니다.\n- 결제 후 7일 이내에 드링클리 앱 “마이페이지 > 구독 관리 > 멤버십 구독 관리 > 해지하기” 를 통해 결제 취소가 가능합니다.\n- 그 외의 취소/환불 문의는 “마이페이지 > 고객센터 > 카카오톡 플러스친구 또는 대표 이메일을 통해 문의해주시면 신속하게 응답해드리겠습니다.</string>
    <string name="membership_caution">멤버십 사용 버튼은 매장 직원만 클릭 할 수 있습니다.\n부주의로 인해 사용하신 경우 재사용이 불가능합니다.</string>

    <string name="membership_unsubscribe_guide">
        %1$s까지 멤버십을 한 번도 사용하지 않으셨다면, 자동으로 전액 환불 처리됩니다.\n\n
        %2$s 이후 또는 멤버십 혜택을 한 번이라도 사용한 경우에는 환불이 불가하며, 멤버십은 %3$s까지 계속 이용하실 수 있습니다.\n\n
        해지 후에는 언제든지 다시 구독하실 수 있습니다.
    </string>

    <string name="membership_price">5,900원</string>
    <string name="button_membership_price">5,900원 결제하기</string>

    <!-- 쿠폰 안내사항 -->
    <string name="coupon_caution">쿠폰 사용 버튼은 매장 직원만 클릭 할 수 있습니다.\n부주의로 인해 사용하신 경우 재사용이 불가능합니다.</string>
    <string name="coupon_guide">- 쿠폰 사용 조건 충족 시 사용 가능\n- 쿠폰 중복 사용 불가</string>

    <!-- 계정 탈퇴 안내사항 -->
    <string name="withdrawal_guide">탈퇴시 현재 구독중인 멤버십이 사라집니다.\n탈퇴 후, 24시간 뒤 재가입할 수 있습니다.</string>

    <!-- underline 버튼 -->
    <string name="button_card_delete"><u>카드삭제</u></string>
    <string name="button_membership_unsubscribe"><u>해지하기</u></string>

</resources>