<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/background"
    tools:context=".ui.payment.SubscribePaymentFragment" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card_primary_stroke_radius10"
                android:paddingHorizontal="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView_subscribe_bedge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_subscribe_bedge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/HeadLine6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="드링클리 멤버십"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView_subscribe_bedge"
                    app:layout_constraintStart_toEndOf="@+id/imageView_subscribe_bedge"
                    app:layout_constraintTop_toTopOf="@+id/imageView_subscribe_bedge" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/background_primary_radius10"
                    android:padding="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_subscribe_bedge">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView_coupon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_ticket" />

                        <TextView
                            android:id="@+id/textView_coupon"
                            style="@style/HeadLine2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:text="@string/membership_price" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_subscribe_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="~"
                        android:textAlignment="center"
                        android:textColor="@color/gray5"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@drawable/background_dialog_radius12"
                android:padding="20dp"
                android:layout_marginBottom="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <TextView
                    android:id="@+id/textView_membership_guide_title"
                    style="@style/HeadLine6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="📌 멤버십 안내사항"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_membership_guide_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/pretendard_medium"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/membership_guide"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_membership_guide_title" />

                <TextView
                    android:id="@+id/textView_membership_cancel_guide_title"
                    style="@style/HeadLine6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="🔖 취소/환불"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_membership_guide_description" />

                <TextView
                    android:id="@+id/textView_membership_cancel_guide_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/pretendard_medium"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/membership_cancel_guide"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_membership_cancel_guide_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/button_unsubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubTitle2"
                android:layout_marginTop="9dp"
                android:paddingVertical="6dp"
                android:paddingHorizontal="16dp"
                android:visibility="invisible"
                android:text="@string/button_membership_unsubscribe"
                android:textColor="@color/gray6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_guide"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/background_gradient_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_membership_payment"
        style="@style/HeadLine3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingVertical="13dp"
        android:text="멤버십 구독권 결제하기"
        android:textColor="@color/gray1"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>